--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body{
-    color: rgb(255, 208, 0);
-    background: brown;
+    color: rgb(255, 255, 255);
+    background: rgb(250, 0, 0);
     margin:0px;
     font-family:"BBH Sans Bogle", sans-serif;
     margin-bottom: 100px;
 }
 
 header{
-     border-bottom:solid 2px rgb(251, 255, 0);
+     border-bottom:solid 2px rgb(255, 255, 255);
      padding:20px;
      font: size 32px;
-     color:rgb(174, 192, 7);
+     color:rgb(239, 240, 237);
 }
 
 .chamada{
