--- a/style.css
+++ b/style.css
@@ -1,28 +1,30 @@
 body{
-    color: rgb(255, 255, 255);
-    background: rgb(250, 0, 0);
-    margin:0px;
-    font-family:"BBH Sans Bogle", sans-serif;
+    color:rgb(245, 243, 247);
+    background: rgb(10, 2, 10);
+    margin: 0px;
+    font-family: "Poller One", sans-serif;
     margin-bottom: 100px;
 }
 
 header{
-     border-bottom:solid 2px rgb(255, 255, 255);
-     padding:20px;
-     font: size 32px;
-     color:rgb(239, 240, 237);
-}
+    border-bottom: solid 2px rgb(247, 241, 241);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(110, 10, 102);
+}    
+
 
 .chamada{
-     background:rgb(165, 125, 125)
-     padding-bottom: 80px;
-     padding-top: 88px;
-     display: flex;
-     justify-content: center;
+    background:gray;
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+}
 
-}    
-chamada-texto{
-     margin-right:5%;
+.chamada-texto{
+    margin-right: 5%;
 }
 h1{
     font-size: 40px;
@@ -32,24 +34,24 @@ p{
 }
 
 .categoria-videos{
-     display: flex;
-     overflow-x: auto;
-     gap: 10px
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
 }
 .categoria{
-     padding-left: 20px;
-     padding-right: 20px;
-     margin-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 20px;
 }
 
 .categoria-videos img{
-     opacity: 0.5;
-     height: 200px;
+    opacity: 0.5;
+    height: 200px;
 }
 .categoria-videos img:hover{
-     opacity: 1.0;
-     border: 1px solid yellow;
+    opacity: 1.0;
+    border: 1px solid white;
 }
 .categoria h2{
-     color: yellowgreen;
+    color: blueviolet;
 }
